[workspace]
resolver = "3"
members = ["packages/*", "examples/*"]

package.authors = [
    "Dioxus Labs",
    "Jonathan Kelley",
    "DogeDark",
    "marc2332",
    "ealmloff",
]
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
package.homepage = "https://dioxuslabs.com"
package.repository = "https://github.com/DioxusLabs/sdk/"

[workspace.dependencies]
# Workspace
dioxus-sdk = { path = "packages/sdk", version = "0.7.0-alpha.1" }
dioxus-time = { path = "packages/time", version = "0.1.0-alpha.1" }
dioxus_storage = { path = "packages/storage", version = "0.1.0-alpha.1" }
dioxus-geolocation = { path = "packages/geolocation", version = "0.1.0-alpha.1" }
dioxus-notification = { path = "packages/notification", version = "0.1.0-alpha.1" }
dioxus-sync = { path = "packages/sync", version = "0.1.0-alpha.1" }
dioxus-util = { path = "packages/util", version = "0.1.0-alpha.1" }
dioxus-window = { path = "packages/window", version = "0.1.0-alpha.1" }

# Dioxus
dioxus = "0.7.0-alpha.2"
dioxus-signals = "0.7.0-alpha.2"
dioxus-desktop = "0.7.0-alpha.2"
dioxus-config-macro = "0.7.0-alpha.2"

# Deps
cfg-if = "1.0.0"
tokio = "1.43.0"
futures = "0.3.31"
futures-util = "0.3.31"

serde = "1.0.163"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3.77"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
