[workspace]
resolver = "3"
members = ["packages/*", "examples/*"]

package.authors = [
    "Dioxus Labs",
    "Jonathan Kelley",
    "DogeDark",
    "marc2332",
    "ealmloff",
]
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
package.homepage = "https://dioxuslabs.com"
package.repository = "https://github.com/DioxusLabs/sdk/"

[workspace.dependencies]
# Workspace
dioxus-sdk = { path = "packages/sdk", version = "0.7.0" }
dioxus-sdk-time = { path = "packages/time", version = "0.7.0" }
dioxus-sdk-storage = { path = "packages/storage", version = "0.7.0" }
dioxus-sdk-geolocation = { path = "packages/geolocation", version = "0.7.0" }
dioxus-sdk-notification = { path = "packages/notification", version = "0.7.0" }
dioxus-sdk-sync = { path = "packages/sync", version = "0.7.0" }
dioxus-sdk-util = { path = "packages/util", version = "0.7.0" }
dioxus-sdk-window = { path = "packages/window", version = "0.7.0" }

# Dioxus
dioxus = "0.7.0"
dioxus-signals = "0.7.0"
dioxus-desktop = "0.7.0"
dioxus-config-macro = "0.7.0"

# Deps
cfg-if = "1.0.0"
tokio = "1.48.0"
futures = "0.3.31"
futures-util = "0.3.31"

serde = "1.0.163"
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3.77"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
