[package]
name = "dioxus-sdk"
version = "0.6.0"
authors = ["Jonathan Kelley", "Dioxus Labs", "ealmloff", "DogeDark", "marc2332"]
edition = "2021"
description = "Platform agnostic library for supercharging your productivity with Dioxus"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DioxusLabs/sdk/"
homepage = "https://dioxuslabs.com"
keywords = ["dom", "gui", "dioxus", "standard", "hooks"]
categories = ["multimedia", "os", "wasm"]


# # # # # # #
# Features. #
# # # # # # #

[features]
clipboard = ["dep:copypasta"]
notifications = ["dep:notify-rust"]
geolocation = [
    # Shared
    "dep:futures",
    "dep:futures-util",

    # Windows
    "windows/Foundation",
    "windows/Devices_Geolocation",

    # Wasm
    "web-sys/Navigator",
    "web-sys/Geolocation",
    "web-sys/PositionOptions",
    "dep:wasm-bindgen",
]
system_theme = [
    # Shared
    "dep:futures",

    # Desktop (not linux)
    "dep:dioxus-desktop",

    # Wasm
    "web-sys/Window",
    "web-sys/MediaQueryList",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
window_size = [
    # Shared
    "dep:futures-util",

    # Desktop
    "dep:dioxus-desktop",

    # Wasm
    "web-sys/Window",
    "dep:wasm-bindgen",
]
channel = ["dep:async-broadcast", "uuid/v4"]
i18n = [
    # Shared
    "dep:serde",
    "dep:serde_json",

    # Non Shared
    "dep:unic-langid",
]
storage = [
    # Shared
    "dep:rustc-hash",
    "dep:postcard",
    "dep:once_cell",
    "dep:dioxus-signals",
    "dep:tokio",
    "tokio/sync",
    "dep:yazi",
    "web-sys/Storage",
    "web-sys/StorageEvent",
    "dep:serde",
    "dep:futures-util",

    # WASM
    "dep:wasm-bindgen",

    # Not WASM
    "dep:directories",
]
timing = [
    # Shared
    "dep:futures",

    # Desktop
    "dep:tokio",
    "tokio/time",

    # Wasm
    "dep:gloo-timers",
]

# CI testing
wasm-testing = [
    "system_theme",
    "geolocation",
    "channel",
    "window_size",
    "timing",
    "i18n",
    "storage",
]
desktop-testing = [
    "system_theme",
    "clipboard",
    "notifications",
    "geolocation",
    "channel",
    "window_size",
    "i18n",
    "timing",
    "storage",
]


# # # # # # # # # # # # # # #
# Non Platform/Shared deps. #
# # # # # # # # # # # # # # #

[dependencies]
dioxus = { workspace = true }
cfg-if = "1.0.0"

# Used by: clipboard
copypasta = { version = "0.8.2", optional = true }

# Used by: notifications
notify-rust = { version = "4.8.0", optional = true }


# Used by: channel
uuid = { version = "1.3.2", optional = true }
async-broadcast = { version = "0.5.1", optional = true }

# Used by: geolocation, storage, timing, window_size, system_theme
futures = { version = "0.3.28", features = ["std"], optional = true }
futures-util = { version = "0.3.28", optional = true }

# Used by: i18n
serde = { version = "1.0.163", optional = true }
serde_json = { version = "1.0.96", optional = true }
unic-langid = { version = "0.9.1", features = ["serde"], optional = true }

# Used by: storage
rustc-hash = { version = "1.1.0", optional = true }
postcard = { version = "1.0.2", features = ["use-std"], optional = true }
once_cell = { version = "1.17.0", optional = true }
dioxus-signals = { workspace = true, features = [
    "serialize",
], optional = true }

yazi = { version = "0.1.4", optional = true }
tracing = "0.1.40"

# Used by: timing & storage
tokio = { version = "1.33.0", optional = true }

# # # # # # # # #
# Windows Deps. #
# # # # # # # # # 

[target.'cfg(windows)'.dependencies]

# Used by: geolocation
windows = { version = "0.48.0", optional = true }


# # # # # # #
# WASM Deps #
# # # # # # #

[target.'cfg(target_family = "wasm")'.dependencies]

# Used by: color_scheme, geolocation, window_size
web-sys = { version = "0.3.60", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.35", optional = true }

# Used by: Geolocation
js-sys = "0.3.62"

# Used by: channel
uuid = { version = "1.3.2", features = ["js"] }

# Used by: timing
gloo-timers = { version = "0.3.0", optional = true, features = ["futures"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]

# Used by: storage
directories = { version = "4.0.1", optional = true }

# Used by: window_size, system_theme
dioxus-desktop = { workspace = true, optional = true }

# # # # #
# Docs. #
# # # # #

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "wasm32-unknown-unknown"]
no-default-features = true
features = ["desktop-testing", "wasm-testing"]
