[package]
name = "dioxus-std"
version = "0.4.2"
authors = ["Jonathan Kelley", "Dioxus Labs", "ealmloff", "DogeDark", "marc2332"]
edition = "2021"
description = "Platform agnostic library for supercharging your productivity with Dioxus"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DioxusLabs/dioxus-std/"
homepage = "https://dioxuslabs.com"
keywords = ["dom", "gui", "dioxus", "standard", "hooks"]
categories = ["multimedia","os", "wasm"]

[features]
clipboard = ["dep:copypasta"]
notifications = ["dep:notify-rust"]
geolocation = ["dep:windows", "dep:futures-util", "dep:futures", "dep:web-sys", "dep:wasm-bindgen", "utils"]
color_scheme = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
utils = ["dep:async-broadcast", "dep:uuid"]
i18n = ["dep:serde", "dep:serde_json", "dep:unic-langid"]
all = ["clipboard", "notifications", "geolocation", "color_scheme", "utils", "i18n"]

# CI testing
wasm-testing = ["geolocation", "color_scheme", "utils", "i18n"]
desktop-testing = ["clipboard", "notifications", "geolocation", "utils", "i18n"]

[dependencies]
dioxus = { version = "0.4" }
cfg-if = "1.0.0"

# utils
uuid = { version = "1.3.2", features = ["v4"], optional = true }
async-broadcast = { version = "0.5.1", optional = true }
# clipboard
copypasta = { version = "0.8.2", optional = true }
# notifications
notify-rust = { version = "4.8.0", optional = true }
# geolocation
futures = { version = "0.3.28", features = ["std"], optional = true }
futures-util = {version = "0.3.28", optional = true }
# i18n
serde = { version = "1.0.163", optional = true }
serde_json = { version = "1.0.96", optional = true }
unic-langid = { version = "0.9.1", features = ["serde"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Foundation", "Devices_Geolocation"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.60", features = ["Window", "MediaQueryList", "Navigator", "Geolocation", "PositionOptions"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.35", optional = true}
js-sys = "0.3.62"
# channel
uuid = {  version = "1.3.2", features = ["v4", "js"]}

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
no-default-features = true
features = ["desktop-testing"]
