[package]
name = "dioxus-std"
version = "0.4.2"
authors = ["Jonathan Kelley", "Dioxus Labs", "ealmloff", "DogeDark", "marc2332"]
edition = "2021"
description = "Platform agnostic library for supercharging your productivity with Dioxus"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DioxusLabs/dioxus-std/"
homepage = "https://dioxuslabs.com"
keywords = ["dom", "gui", "dioxus", "standard", "hooks"]
categories = ["multimedia", "os", "wasm"]


# # # # # # #
# Features. #
# # # # # # #

[features]
utils = ["dep:async-broadcast", "uuid/v4"]
clipboard = ["dep:dioxus", "dep:copypasta"]
notifications = ["dep:dioxus", "dep:notify-rust"]
geolocation = [
    # Shared
    "dep:dioxus",
    "dep:futures",
    "dep:futures-util",

    # Windows
    "windows/Foundation",
    "windows/Devices_Geolocation",

    # Wasm
    "web-sys/Navigator",
    "web-sys/Geolocation",
    "web-sys/PositionOptions",
    "dep:wasm-bindgen",
]
color_scheme = [
    # Shared
    "dep:dioxus",

    # Wasm
    "web-sys/Window",
    "web-sys/MediaQueryList",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
i18n = [
    # Shared
    "dep:serde",
    "dep:serde_json",

    # Non Shared
    "dep:unic-langid",
]
conn_mgr = ["dep:futures", "dep:futures-util", "serde/derive"]
conn_mgr_ws = [
    # Shared
    "conn_mgr",
    "dep:serde_json",

    # Wasm
    "web-sys/WebSocket",
    "web-sys/MessageEvent",
    "dep:wasm-bindgen",
    "dep:js-sys",
]

# CI testing
wasm-testing = ["geolocation", "color_scheme", "utils", "i18n", "conn_mgr_ws"]
desktop-testing = ["clipboard", "notifications", "geolocation", "utils", "i18n"]
local-dev-testing = ["conn_mgr_ws"]


# # # # # # # # # # # # # # #
# Non Platform/Shared deps. #
# # # # # # # # # # # # # # #

[dependencies]
cfg-if = "1.0.0"
dioxus = { version = "0.4", optional = true }

# Used by: clipboard
copypasta = { version = "0.8.2", optional = true }

# Used by: notifications
notify-rust = { version = "4.8.0", optional = true }


# Used by: utils
uuid = { version = "1.3.2", optional = true }
async-broadcast = { version = "0.5.1", optional = true }

# Used by: geolocation, conn_mgr
futures = { version = "0.3.28", features = ["std"], optional = true }
futures-util = { version = "0.3.28", optional = true }

# Used by: i18n, conn_mgr
serde = { version = "1.0.163", optional = true }
serde_json = { version = "1.0.96", optional = true }

# Used by: i18n
unic-langid = { version = "0.9.1", features = ["serde"], optional = true }


# # # # # # # # #
# Windows Deps. #
# # # # # # # # # 

[target.'cfg(windows)'.dependencies]

# Used by: geolocation
windows = { version = "0.48.0", optional = true }


# # # # # # #
# WASM Deps #
# # # # # # #

[target.'cfg(target_family = "wasm")'.dependencies]

# Used by: color_scheme, geolocation, conn_mgr_ws
web-sys = { version = "0.3.60", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.35", optional = true }

# Used by: geolocation, conn_mgr_ws
js-sys = { version = "0.3.62", optional = true }

# Used by: utils
uuid = { version = "1.3.2", features = ["js"], optional = true }


# # # # #
# Docs. #
# # # # #

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
no-default-features = true
features = ["desktop-testing"]
