[package]
name = "storage-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus-sdk = { workspace = true, features = ["storage"] }
dioxus = { workspace = true, features = ["router"] }

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server"]
