[package]
name = "storage-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus_storage = { workspace = true }
serde = "1.0.219"
serde_json = "1.0.140"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server"]
