[package]
name = "timing-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus = { workspace = true }
dioxus-sdk-time = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
